# GATEWAY_DEMO

./: CMakeLists.txt  README.md
include/: C_queue.h  config.h  protocol_translate.h  raw_socket_ipv6.h  redundancy_transmit.h  socket_can.h
src/: C_queue.c  main.c  priority.c  protocol_convert.c  protocol_translate.c  raw_socket_ipv6.c  redundancy_transmit.c  socket_can.c
